# duochat

./: main.py  pyproject.toml
duochat/: data_model.py  dialog.py  main.py
