[project]
name = "duochat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "google-generativeai>=0.8.4",
    "gunicorn>=23.0.0",
    "mesop>=0.14.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
